--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,7 @@
   <div class="container">
     
     <div id="menu" class="right alignright">
-      <ul class="inline-list">
-        <li><a href="">How it works?</a></li>
-        <li><a href="">Who is it for?</a></li>
-        <li><a href="">School & Teachers</a></li>
-        <li><a href="">What do I get?</a></li>
-        <li><a href="">News</a></li>
-      </ul>
+      {% include menu.html %}
     </div>
     
     <div id="logo">
