Features rewritten using tables

--- a/index.haml
+++ b/index.haml
@@ -38,56 +38,56 @@ layout: default
           %a{:href => "http://www.youtube.com/user/languagelabdotcom", :target => "_blank", :title => "More videos on Youtube"} See more videos 
   
   #features.block
-    .col-1
-      #twenty
-        %h1.large
-          24/7
-      #home
-        %table
-          %tr
-            %td
-              %img{:src => '/images/home.jpg'}
-            %td
-              %img{:src => '/images/tram.jpg'}
-      #laptop
-        %table
-          %tr
-            %td
-              %img{:src => '/images/pc.jpg'}
-            %td
-              %img{:src => '/images/headphone.jpg'}
-                  
-    .col-2
-      #levels
-        %ul
-          %li Beginner
-          %li Intermediate
-          %li Advanced
-          %li Refreshing
-      #types
-        %ul
-          %li General
-          %li Business
-          %li British English
-          %li American English
-      #scenarios
-        %ul
-          %li Culture
-          %li Leisure
-          %li Travel
-          %li Health
-    .col-3
-      #countries
-        %h1.large
-          70 Countries
-      #classes
-        %h1.large 
-          6 students / 1 hour
-      #method
-        %table
-          %tr
-            %td
-              %img{:src => '/images/see.jpg'}
-            %td
-              %img{:src => '/images/listen.jpg'}
+    %table
+      %tr
+        %td.col-1
+          %h1.large
+            24/7
+        %td.col-2
+          %ul
+            %li Beginner
+            %li Intermediate
+            %li Advanced
+            %li Refreshing
+        %td.col-3
+          %h1.large
+            70 Countries
+      %tr
+        %td.col-1
+          %table
+            %tr
+              %td
+                %img{:src => '/images/home.jpg'}
+              %td
+                %img{:src => '/images/tram.jpg'}
+        %td.col-2
+          %ul
+            %li General
+            %li Business
+            %li British English
+            %li American English
+        %td.col-3
+          %h1.large 
+            6 students / 1 hour
+      %tr
+        %td.col-1
+          %table
+            %tr
+              %td
+                %img{:src => '/images/pc.jpg'}
+              %td
+                %img{:src => '/images/headphone.jpg'}
+        %td.col-2           
+          %ul
+            %li Culture
+            %li Leisure
+            %li Travel
+            %li Health
+        %td.col-3
+          %table
+            %tr
+              %td
+                %img{:src => '/images/see.jpg'}
+              %td
+                %img{:src => '/images/listen.jpg'}
           
