--- a/index.haml
+++ b/index.haml
@@ -33,7 +33,8 @@ layout: default
       %h1
         in a Virtual 3D City
       #info
-        %iframe{:width => 425, :height => 349, :src => "http://www.youtube.com/embed/U9Pgd0YpOoo", :frameborder => "0" }
+        /
+          %iframe{:width => 425, :height => 349, :src => "http://www.youtube.com/embed/U9Pgd0YpOoo", :frameborder => "0" }
         #more
           %a{:href => "http://www.youtube.com/user/languagelabdotcom", :target => "_blank", :title => "More videos on Youtube"} See more videos 
   
@@ -44,6 +45,8 @@ layout: default
           %h1.large
             24/7
         %td.col-2
+          %h4
+            Levels
           %ul
             %li Beginner
             %li Intermediate
@@ -61,11 +64,14 @@ layout: default
               %td
                 %img{:src => '/images/tram.jpg'}
         %td.col-2
+          %h4
+            Study Purpose
           %ul
             %li General
             %li Business
             %li British English
             %li American English
+            %li Exam preparation
         %td.col-3
           %h1.large 
             6 students / 1 hour
@@ -77,7 +83,9 @@ layout: default
                 %img{:src => '/images/pc.jpg'}
               %td
                 %img{:src => '/images/headphone.jpg'}
-        %td.col-2           
+        %td.col-2  
+          %h4
+            Topics         
           %ul
             %li Culture
             %li Leisure
@@ -90,4 +98,20 @@ layout: default
                 %img{:src => '/images/see.jpg'}
               %td
                 %img{:src => '/images/listen.jpg'}
+
+  #cert.block
+    %table
+      %tr
+        %td
+          %img{:src => '/images/ielts.jpg'}
+        %td
+          %img{:src => '/images/toefl.png'}
+        %td
+          %img{:src => '/images/esol.jpg'}
+        %td
+          %img{:src => '/images/toles.jpg'}
+        %td
+          %img{:src => '/images/lcci.jpg'}
+        %td
+          %img{:src => '/images/bulats.jpg'}
           
