Permalinks, category archives rewritten

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
       {% include menu.html %}
     </div>
     
-    <div id="logo">
+    <div id="logo" class="col-1">
       <a href="/" alt="{{ site.name }}" title="{{ site.name }}">
         <h1>{{ site.name }}</h1>
       </a>
     </div>
     
-    <div id="strapline">
+    <div id="strapline" class="col-1">
       <a href="/" alt="{{ site.strapline }}" title="{{ site.strapline }}">
         <h3>{{ site.strapline }}</h3>
       </a>
