--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,7 @@
 <ul class="inline-list">
-  <li><a href="">Home</a></li>
-  <li><a href="">How it Works</a></li>
-  <li><a href="">Teachers & Courses</a></li>
-  <li><a href="">FAQ</a></li>
-  <li><a href="">Contact</a></li>
-  <li><a href="">News</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a href="/features">Features</a></li>
+  <li><a href="/faq">FAQ</a></li>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/blog">Blog</a></li>
 </ul>
