--- a/_posts/2011-06-02-chris-speck.haml
+++ b/_posts/2011-06-02-chris-speck.haml
@@ -1,7 +1,8 @@
 ---
+layout: page
 categories: 
   - teachers
-name: Chris Speck
+title: Chris Speck
 experience: 12
 education: Philosophy, History, Linguistics
 country: UK
