--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,7 +6,7 @@ layout: page
   <div id="articles">   
     {% assign total = site.categories[page.category].size %} 
     {% for p in site.categories[page.category] %}
-      {{ p.education }}
+      {{ p.title }}
       <br/>
     {% endfor %}
   </div>
