--- a/_posts/2011-06-02-sally-langer.haml
+++ b/_posts/2011-06-02-sally-langer.haml
@@ -2,7 +2,7 @@
 layout: page
 categories: 
   - teachers
-name: Sally Langer
+title: Sally Langer
 experience: 8
 education: Humanity
 country: Australia
