--- a/_posts/2011-06-03-the-lcci-certificate.haml
+++ b/_posts/2011-06-03-the-lcci-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The LCCI Certificate
+short: LCCI
 image: /images/lcci.jpg
 excerpt: You can learn anywhere you want
 ---
