--- a/_posts/2011-06-02-dafne-gonzalez.haml
+++ b/_posts/2011-06-02-dafne-gonzalez.haml
@@ -1,7 +1,7 @@
 ---
 categories: 
   - teachers
-name: Dafne Gonzalez
+title: Dafne Gonzalez
 experience: 30
 education: Applied Linguistics, Education
 country: Venezuela
