--- a/_posts/2011-06-03-the-bulats-certificate.haml
+++ b/_posts/2011-06-03-the-bulats-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The BULATS Certificate
+short: BULATS
 image: /images/bulats.jpg
 excerpt: You can learn anywhere you want
 ---
