--- a/_posts/2011-06-03-the-esol-certificate.haml
+++ b/_posts/2011-06-03-the-esol-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The Cambridge ESOL Certificate
+short: ESOL
 image: /images/esol.jpg
 excerpt: You can learn anywhere you want
 ---
