--- a/_posts/2011-06-03-the-ielts-certificate.haml
+++ b/_posts/2011-06-03-the-ielts-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The IELTS Certificate
+short: IELTS
 image: /images/ielts.jpg
 excerpt: You can learn anywhere you want
 ---
