--- a/_posts/2011-06-03-the-toefl-certificate.haml
+++ b/_posts/2011-06-03-the-toefl-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The TOEFL Certificate
-image: /images/toefl.jpg
+short: TOEFL
+image: /images/toefl.png
 excerpt: You can learn anywhere you want
 ---
