--- a/_posts/2011-06-03-the-toles-certificate.haml
+++ b/_posts/2011-06-03-the-toles-certificate.haml
@@ -3,6 +3,7 @@ layout: page
 categories: 
   - certificates
 title: The TOLES Certificate
+short: TOLES
 image: /images/toles.jpg
 excerpt: You can learn anywhere you want
 ---
