--- a/_posts/2011-06-02-claire-hubbert.haml
+++ b/_posts/2011-06-02-claire-hubbert.haml
@@ -6,8 +6,9 @@ title: Claire Hubbert
 experience: 10
 education: Commercial Property
 country: Australia
-avatar: /images/jazz_sl.png
-irl: /images/jazz_rl.png
+images:
+  - url: /images/jazz_sl.png
+  - url: /images/jazz_rl.png
 ---
 Claire is an English Language teacher at Languagelab and also at a Language College in Australia. Her qualifications include the CELTA qualification and a Degree in Commercial Property. She specialises in teaching Business English, TOEIC and IELTS.
 
