--- a/_posts/2011-06-02-cristina-palomeque.haml
+++ b/_posts/2011-06-02-cristina-palomeque.haml
@@ -6,7 +6,8 @@ title: Cristina Palomeque
 experience: 4
 education: English, Education
 country: Spain
-avatar: /images/cristina_sl.jpg
-irl: /images/cristina_rl.jpg
+images:
+  - url: /images/cristina_sl.jpg
+  - url: /images/cristina_rl.jpg
 ---
 Cristina is presently working on her doctoral dissertation on Computer Assisted Language Learning.
