--- a/_posts/2011-06-02-dafne-gonzalez.haml
+++ b/_posts/2011-06-02-dafne-gonzalez.haml
@@ -5,7 +5,9 @@ title: Dafne Gonzalez
 experience: 30
 education: Applied Linguistics, Education
 country: Venezuela
-avatar: /images/daf_sl.jpg
-irl: /images/daf_rl.jpg
+images:
+  - url: /images/daf_sl.jpg
+  - url: /images/daf_rl.jpg
 ---
+Since 2002, Dafne has been teaching blended and online courses. She is the coordinator of the TESOL Electronic Village Online, and has co-moderated the Becoming a Webhead (BaW) online Workshop since 2004.
 
