--- a/_posts/2011-06-02-mike-solly.haml
+++ b/_posts/2011-06-02-mike-solly.haml
@@ -6,7 +6,8 @@ title: Mike Solly
 experience: 23
 education: English, Drama
 country: UK
-avatar: /images/mike_sl.jpg
-irl: /images/mike_rl.jpg
+images:
+  - url: /images/mike_sl.jpg
+  - url: /images/mike_rl.jpg
 ---
 Mike has taught all levels of learner and worked in many countries around the world. He has written materials for Cambridge University Examining Board and was in the original writing team for the Cambridge Business Certificate (BEC) exams. He also worked for the British Council setting up a new teaching centre in Saudi Arabia, and later managed English language projects in Bosnia and Herzegovina.
