--- a/_posts/2011-06-02-paul-swindells.haml
+++ b/_posts/2011-06-02-paul-swindells.haml
@@ -6,7 +6,8 @@ title: Paul Swindells
 experience: 20
 education: Education
 country: Turkey
-avatar: /images/paul_sl.jpg
-irl: /images/paul_rl.jpg
+images:
+  - url: /images/paul_sl.jpg
+  - url: /images/paul_rl.jpg
 ---
 Paul has taught English in the Seychelles, Egypt, America, Japan, and England. Presently, he is living in Turkey. Paul has taught Intensive English, English for Academic Purposes, and test preparation classes like IELTS and TOEFL.
