--- a/_posts/2011-06-03-the-ielts-certificate.haml
+++ b/_posts/2011-06-03-the-ielts-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The IELTS Certificate
 short: IELTS
-image: /images/ielts.jpg
+images: 
+  - url:  /images/ielts.jpg
 excerpt: You can learn anywhere you want
 ---
