--- a/_posts/2011-06-03-the-toefl-certificate.haml
+++ b/_posts/2011-06-03-the-toefl-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The TOEFL Certificate
 short: TOEFL
-image: /images/toefl.png
+images: 
+  - url: /images/toefl.png
 excerpt: You can learn anywhere you want
 ---
