--- a/_posts/2011-06-03-the-toles-certificate.haml
+++ b/_posts/2011-06-03-the-toles-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The TOLES Certificate
 short: TOLES
-image: /images/toles.jpg
+images: 
+  - url: /images/toles.jpg
 excerpt: You can learn anywhere you want
 ---
