--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,22 +1,22 @@
 <div id="sidebar"  class="col-1">
-  <h4>Cum functioneaza?</h4>
+  <h4>How It Works?</h4>
   <ul>
-    <li><a href="">Inscriere</a></li>
-    <li><a href="/teachers">Profesori</a></li>
-    <li><a href="">Cursuri</a></li>
-    <li><a href="">Colegi</a></li>
-    <li><a href="">Scoala virtuala</a></li>
-    <li><a href="">Cerinte technice</a></li>    
+    <li><a href="">Starting up</a></li>
+    <li><a href="/teachers">Teachers</a></li>
+    <li><a href="">Classes</a></li>
+    <li><a href="">Students</a></li>
+    <li><a href="">English City 3D</a></li>
+    <li><a href="">Technical Requirements</a></li>    
   </ul>
   
-  <h4>Pentru cine?</h4>
+  <h4>What You'll Learn?</h4>
   <ul>
     {% for l in site.categories.follow-your-interests reversed %}
     <li><a href="">{{ l.short }}</a></li>
     {% endfor %}
   </ul>
   
-  <h4>Rezultate, certificate</h4>
+  <h4>What You'll Get? Certificates</h4>
   <ul>
     {% for l in site.categories.certificates reversed %}
     <li><a href="">{{ l.short }}</a></li>
