--- a/_posts/2011-06-02-iffaf-khan.haml
+++ b/_posts/2011-06-02-iffaf-khan.haml
@@ -5,7 +5,8 @@ title: Iffaf Khan
 experience: 23
 education: English
 country: UK
-avatar: /images/iffaf_sl.jpg
-irl: /images/iffaf_rl.jpg
+images:
+  - url: /images/iffaf_sl.jpg
+  - url: /images/iffaf_rl.jpg
 ---
 Iffaf first started as a teaching assistant 23 years ago and has been teaching English Literature and Language since then. She has been involved in teacher training for the last 11 years.
