--- a/_posts/2011-06-02-sally-langer.haml
+++ b/_posts/2011-06-02-sally-langer.haml
@@ -6,7 +6,8 @@ title: Sally Langer
 experience: 8
 education: Humanity
 country: Australia
-avatar: /images/sally_sl.jpg
-irl: /images/sally_rl.jpg
+images:
+  - url: /images/sally_sl.jpg
+  - url: /images/sally_rl.jpg
 ---
 Sally has the Diploma of Education (Secondary), the Cambridge RSA/CELTA, and a Bachelor's of Arts (Humanity). She has taught in Mexico, Japan and Australia.
