--- a/_posts/2011-06-03-the-bulats-certificate.haml
+++ b/_posts/2011-06-03-the-bulats-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The BULATS Certificate
 short: BULATS
-image: /images/bulats.jpg
+images: 
+  - url: /images/bulats.jpg
 excerpt: You can learn anywhere you want
 ---
