--- a/_posts/2011-06-03-the-esol-certificate.haml
+++ b/_posts/2011-06-03-the-esol-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The Cambridge ESOL Certificate
 short: ESOL
-image: /images/esol.jpg
+images: 
+  - url:  /images/esol.jpg
 excerpt: You can learn anywhere you want
 ---
