--- a/_posts/2011-06-03-the-lcci-certificate.haml
+++ b/_posts/2011-06-03-the-lcci-certificate.haml
@@ -4,6 +4,7 @@ categories:
   - certificates
 title: The LCCI Certificate
 short: LCCI
-image: /images/lcci.jpg
+images: 
+  - url: /images/lcci.jpg
 excerpt: You can learn anywhere you want
 ---
