Two new layouts added for posts and teachers

--- a/_posts/2011-06-03-speak-and-listen.haml
+++ b/_posts/2011-06-03-speak-and-listen.haml
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 categories: 
   - fun
 title: Speak and listen instead of read and write
@@ -8,4 +8,10 @@ images:
   - url: /images/listen.jpg 
 excerpt: You can learn anywhere you want
 ---
-aaaaaaaaaaaaaaaaa
+With Scrol we tried to create a Shopify theme displaying as much information as possible on frontpage.
+
+Like latest products, products on sale, shop & shopping information, product categories, vendors and types ... and so on.
+
+Such antre should generate high impact on first-time visitors, and in return, 
+regular customers would immediately catch up with the latest news with the store.
+
