Starting to add the design

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,5 +3,5 @@
   <li><a href="/features">Features</a></li>
   <li><a href="/faq">FAQ</a></li>
   <li><a href="/contact">Contact</a></li>
-  <li><a href="/blog">Blog</a></li>
+  <li class="last"><a href="/blog">Blog</a></li>
 </ul>
