--- a/_layouts/teacher.html
+++ b/_layouts/teacher.html
@@ -25,9 +25,9 @@ layout: default
         <div id="body">
           {{ content }}
         </div>
+        {% include more.html %}
       </div>
     </div>
-    
   </div>
 </div>
 
