--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,15 @@
 	  <link href="/css/wide.css" charset="utf-8" media="screen and (min-width: 1025px) and (max-width: 1399px)" rel="stylesheet" type="text/css" />
     <link href="/css/large.css" charset="utf-8" media="screen and (min-width: 1400px)" rel="stylesheet" type="text/css" />        
     
+    <script type="text/javascript">
+      var myfont_webfont_test = false;
+      var woffEnabled = true;
+    </script>
+    <script type="text/javascript" src="/css/MuseoSans.js"></script>
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script type="text/javascript" src="/js/jquery.init.js"></script>
+    
   </head>
   
   <body>
