Frontpage structure ok

--- a/_posts/2011-06-03-average-six-students-per-class.haml
+++ b/_posts/2011-06-03-average-six-students-per-class.haml
@@ -3,6 +3,6 @@ layout: page
 categories: 
   - fun
 title: Average 6 students / 1 hour classes
-short: 6 students / 1 hour
+short: 6 students / class
 excerpt: You can learn anywhere you want
 ---
