--- a/_posts/2011-06-03-choose-your-own-level.haml
+++ b/_posts/2011-06-03-choose-your-own-level.haml
@@ -3,7 +3,7 @@ layout: page
 categories: 
   - follow-your-interests
 title: Choose your own level of learning
-short: Level
+short: Levels
 list:
   - beginner
   - intermediate
