--- a/_posts/2011-06-03-learn-at-home-or-while-traveling.haml
+++ b/_posts/2011-06-03-learn-at-home-or-while-traveling.haml
@@ -3,7 +3,7 @@ layout: page
 categories: 
   - comfortable
 title: Learn at home or while traveling
-excerpt: You can learn anywhere you want
+excerpt: You can learn anywhere and anytime you want, no need to go to school
 images:
   - url: /images/home.jpg
   - url: /images/tram.jpg
