--- a/_posts/2011-06-03-non-stop-learning.haml
+++ b/_posts/2011-06-03-non-stop-learning.haml
@@ -1,8 +1,8 @@
 ---
 layout: page
 categories: 
-  - comfortable
+  - fun
 title: Non-stop learning
-short: 24/7
-excerpt: You can learn anytime you want
+short: 24/7 non-stop learning
+excerpt: You can learn anywhere and anytime you want, no need to go to school
 ---
