--- a/_posts/2011-06-03-speak-and-listen.haml
+++ b/_posts/2011-06-03-speak-and-listen.haml
@@ -1,12 +1,12 @@
 ---
 layout: post
 categories: 
-  - fun
+  - comfortable
 title: Speak and listen instead of read and write
 images:
   - url: /images/see.jpg
   - url: /images/listen.jpg 
-excerpt: You can learn anywhere you want
+excerpt: Speak and listen instead of read and write
 ---
 With Scrol we tried to create a Shopify theme displaying as much information as possible on frontpage.
 
